--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -1,5 +1,6 @@
 .main-page-container {
   padding: 20px 20px;
+  position: relative;
 }
 
 .main-page-content {
@@ -18,12 +19,14 @@
   flex-direction: column;
   justify-content: flex-start;
   text-align: left;
+  position: relative;
 }
 
 .image-section {
   flex: 1;
   text-align: center;
   padding-top: 20px;
+  position: relative;
 }
 
 .main-image {
@@ -41,4 +44,33 @@
   font-size: 0.9rem;
   color: #666;
   margin-top: 5px;
+}
+
+.blue-vector {
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  max-height: 300px;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.yellow-vector {
+  position: absolute;
+  bottom: -170px;
+  right: 0%;
+  width: 250px;
+  height: 250px;
+  z-index: -1;
+  pointer-events: none;
+}
+
+@media (max-width: 768px) {
+  .blue-vector,
+  .yellow-vector {
+    display: none;
+  }
 }
