--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -69,6 +69,24 @@
 }
 
 @media (max-width: 768px) {
+  .main-page-content {
+    flex-direction: column-reverse;
+    gap: 0px;
+  }
+
+  .text-section p {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+
+  .image-section {
+    padding-top: 0;
+  }
+
+  .image-title {
+    margin-top: 0;
+  }
+
   .blue-vector,
   .yellow-vector {
     display: none;
