--- a/src/UI/Header.css
+++ b/src/UI/Header.css
@@ -62,7 +62,7 @@
 .login-button {
   display: flex;
   align-items: center;
-  background-color: #e0e0e0; /* Slightly darker grey for buttons */
+  background-color: #e0e0e0;
   padding: 8px 15px;
   border-radius: 5px;
   cursor: pointer;
@@ -74,7 +74,6 @@
 .login-icon {
   height: 20px;
   margin-right: 8px;
-  filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(100%); /* Make shield icon black */
 }
 
 .language-switcher {
@@ -98,7 +97,7 @@
   height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  border-top: 5px solid black; /* Dropdown arrow black */
+  border-top: 5px solid black;
   margin-left: 5px;
 }
 
@@ -210,5 +209,24 @@
     height: 32px; 
     width: 32px; 
     margin-right: 0; 
+  }
+
+  .header-desktop {
+    padding: 5px 0;
+    font-size: 6px;
+  }
+
+  .logo-section {
+    margin-left: 0px;
+    margin-right: 10px;
+  }
+  .main-page-content {
+    flex-direction: column-reverse;
+    gap: 0px;
+  }
+
+  .blue-vector,
+  .yellow-vector {
+    display: none;
   }
 }
