Make logo and logo text take you to home

--- a/src/UI/Header.css
+++ b/src/UI/Header.css
@@ -24,6 +24,13 @@
   margin-left: -10px;
 }
 
+.logo-section a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+}
+
 .logo {
   height: 40px;
   margin-right: 5px;
