--- a/src/pages/Main/MainPage.css
+++ b/src/pages/Main/MainPage.css
@@ -102,7 +102,7 @@
 .blue-vector {
   position: absolute;
   bottom: -100px;
-  left: 0;
+  left: 20px;
   width: 100%;
   max-width: 300px;
   height: auto;
@@ -114,7 +114,7 @@
 .yellow-vector {
   position: absolute;
   bottom: -170px;
-  right: 0%;
+  right: 20px;
   width: 250px;
   height: 250px;
   z-index: -1;
